--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* hate this, but the bg-gradient seems limited in tailwind */
+.loading-override {
+  background-image: linear-gradient(
+    105deg,
+    transparent 0%,
+    transparent 40%,
+    #f8f7ff 50%,
+    transparent 60%,
+    transparent 100%
+  );
+}
